# DetailManager2

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
src/: AtsModule.cpp  AtsModule.hpp  BveAtsPlugin.c  BveAtsPlugin.h  EntryPoint.cpp  Pal.hpp  Pal_Windows.cpp  Pal_Windows_Test.cpp  Types.hpp  Types_Windows.hpp  atsplugin.h
